<resources>
    <string name="app_name">Muslim Mate</string>
    <string name="main">Muslim Mate</string>
    <string name="action_compass">Compass</string>
    <string name="action_settings">Settings</string>
    <string name="action_location">Location</string>
    <string name="action_convert_date">Convert Date</string>
    <string name="action_mosque">Places around me</string>
    <string name="action_world">World Prayer</string>
    <string name="action_about_app">About us</string>
    <string name="action_rate_app">Rate App</string>
    <string name="action_share">Share App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_azkar">AzkarActivity</string>
    <string name="praying_tab">Praying Time</string>
    <string name="calender_tab">Calendar</string>
    <string name="azkar_tab">Azkar</string>
    <string name="islamic_tab">Islamic Events</string>
    <string name="weather_tab">Weather</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Doha</string>
    <string name="zuhr">Zuhr</string>
    <string name="asr">Asr</string>
    <string name="magrib">Magrib</string>
    <string name="isha">Isha</string>
    <string name="not_detected">Not detected</string>
    <string name="no_location">No location detected</string>
    <string name="qibla_direction">Qibla direction from North:</string>
    <string name="qibla_notic">Note: you might need to move the device in a circular motion to reset the compass</string>
    <string name="month1">Muharram</string>
    <string name="month2">Safar</string>
    <string name="month3">Raby` al-awal</string>
    <string name="month4">Raby` al-THaany</string>
    <string name="month5">Jumaada al-awal</string>
    <string name="month6">Jumaada al-THaany</string>
    <string name="month7">Rajab</string>
    <string name="month8">Sha`baan</string>
    <string name="month9">Ramadhan</string>
    <string name="month10">Shawwal</string>
    <string name="month11">Thul Qa`dah</string>
    <string name="month12">Thul Hijjah</string>
    <string name="month1g">January</string>
    <string name="month2g">February</string>
    <string name="month3g">March</string>
    <string name="month4g">April</string>
    <string name="month5g">May</string>
    <string name="month6g">June</string>
    <string name="month7g">July</string>
    <string name="month8g">August</string>
    <string name="month9g">September</string>
    <string name="month10g">October</string>
    <string name="month11g">November</string>
    <string name="month12g">December</string>
    <string name="day1">Saturday</string>
    <string name="day2">Sunday</string>
    <string name="day3">Monday</string>
    <string name="day4">Tuesday</string>
    <string name="day5">Wednesday</string>
    <string name="day6">Thursday</string>
    <string name="day7">Friday</string>
    <string name="day1m">Satu</string>
    <string name="day2m">Sun</string>
    <string name="day3m">Mon</string>
    <string name="day4m">Tues</string>
    <string name="day5m">Wedn</string>
    <string name="day6m">Thur</string>
    <string name="day7m">Fri</string>
    <string name="sun">Sun</string>
    <string name="satur">Satur</string>
    <string name="fri">Fri</string>
    <string name="thurs">Thurs</string>
    <string name="wedn">Wedn</string>
    <string name="tues">Tues</string>
    <string name="mon">Mon</string>
    <string name="houres"> hours and </string>
    <string name="min"> minutes remaining</string>
    <string name="fajr_prayer">Fajr Prayer </string>
    <string name="sunrize_prayer">Doha Prayer </string>
    <string name="zuhr_prayer">Zuhr Prayer </string>
    <string name="asr_prayer">Asr Prayer </string>
    <string name="magreb_prayer">Magrib Prayer </string>
    <string name="asha_prayer">Isha Prayer </string>
    <string name="jomma_prayer">Jummah payer</string>
    <string name="mid_night">Midnight</string>
    <string name="quibla_compass">Quibla Compass</string>
    <string name="settings_activity">Settings</string>
    <string name="praying">Praying</string>
    <string name="praying_sammary">Setting for praying calculation</string>
    <string name="azkar">Azkar</string>
    <string name="azkar_sammary">Setting for azkar</string>
    <string name="title_activity_settings">Settings</string>
    <string name="praying_notification">Praying notification</string>
    <string name="praying_notification_summary">Praying notification sound</string>
    <string name="calcType1">Egyption General Authority of Survey</string>
    <string name="calcType2">University of Islamic Sciences,Karachi</string>
    <string name="calcType3">Islamic Society of North America(ISNA)</string>
    <string name="calcType4">Umm al-Qura University, Makkah</string>
    <string name="calcType5">Muslim World League</string>
    <string name="mazhab1">Shafii</string>
    <string name="mazhab2">Hanafi</string>
    <string name="calculation_type">Calculation Type</string>
    <string name="calculation_type_summary">Choose the different method of calculating prayer</string>
    <string name="mazhab">Mazhab</string>
    <string name="mazhab_summary">Choose the mazhab types</string>
    <string name="day_light">Adjust Daylight saving time</string>
    <string name="day_light_summery">Activating daylight saving time</string>
    <string name="azkar_notification">Azkar notification</string>
    <string name="Azkar_notification_summary">Activate azkar notification</string>
    <string name="islamic_event">Islamic Event</string>
    <string name="islamic_event_summary">Activate islamic event notifications</string>
    <string name="language">Language</string>
    <string name="language_summary">choose your language</string>
    <string name="lang1">العربية</string>
    <string name="lang2">English</string>
    <string name="setting_category1">General</string>
    <string name="setting_category2">Praying</string>
    <string name="vibration">Vibration</string>
    <string name="vibration_summary">Activate vibration during silent mode</string>
    <string name="hour">Use 24 Hour</string>
    <string name="hour_summary">show hours in 24 format</string>
    <string name="praying_time">Praying time</string>
    <string name="show_only">Show only</string>
    <string name="prayers">Prayers</string>
    <string name="prayingTime">Praying Time</string>
    <string name="remember">Remember</string>
    <string name="sabah">Azkar Sabah</string>
    <string name="massa">Azkar Masaa</string>
    <string name="pm">PM</string>
    <string name="am">AM</string>
    <string name="silent">Silent</string>
    <string name="silent_summary">Silent mood in prayer</string>
    <string name="led">Led</string>
    <string name="led_summary">Led alert with notifications</string>
    <string name="share_via">Shared by</string>
    <string name="changeCompassView">Change view</string>
    <string name="ramdanstart">Ramadan</string>
    <string name="laylt_kader">Laylat al Kadr</string>
    <string name="eid_el_feter">Eid-al-Fitr</string>
    <string name="wafet_el_arafa">Waqf al Arafa</string>
    <string name="el_adha">Eid-al-Adha</string>
    <string name="islamic_year">Islamic New Year</string>
    <string name="milad_al_naby">Milad un Nabi</string>
    <string name="select_city">Select City</string>
    <string name="worldprayer">World Prayer</string>
    <string name="showprayer">Show prayer</string>
    <string name="gps_alert">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="internet_alert">Your internet connection seems to be disabled, enable it and try again.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="hijri">Hijri</string>
    <string name="gregorian">Gregorian</string>
    <string name="about">About us</string>
    <string name="invalid_date">Invalid date</string>
    <string name="near">Near</string>
    <string name="humidity">humidity</string>
    <string name="wind_speed">wind speed</string>
    <string name="wind_meager">m/s</string>
    <string name="change_method">Changes will appear after you reload application</string>
    <string name="alert_first_open">Your location is major to start application</string>
    <string name="manual_selection_title">Manual Selection</string>
    <string name="manual_selection">Select Place</string>
    <string name="company_info_web">تعتبر شركة فكرة من إحدي شركات البرمجة التي تتمتع بالخبرة في مجال تصميم تطبيقات المحمول والمواقع الإليكترونية،لدينا فريق عمل قوي، ذو خبرة عميقة في تطوير الأدوات التكنولوجية الرئيسية المختلفة من جافا، دوت نت، بالإضافة إلي معرفتنا العميقة بالأي فون والاندرويد والبلاك بيري.فكرة تحتل مكان فريد من بين المئات من الشركات المحترفة في البرمجة وشركات تصميم المواقع الإليكترونية،فنحن لا نكتفي فقط بتقديم خدمة او منتج ولكننا نقدم افضل الوسائل والحلول المتاحة التي تتناسب مع المتطلبات المالية والوظيفية لعملائنا.إن تحليلاتنا الديمجرافية التنافسية والتي هي في عمق السوق تمكن شركتنا من إنتاج تحسينات مثلى لمحركات البحث لا يستطيع منافسينا إنتاجها بنفس المستوى.نحن نهدف باستمرار لعمل حلول مختلفة بناءًا على متطلبات عملائنا المالية واستراتيجياتهم الدقيقة تقود إلى علاقات عمل مستمرة وطويلة المدى.نتمنى مساعدتكم.</string>

    <string name="title_activity_select_position">Select Location</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="close">Close</string>
    <string name="select_country">Select Country</string>
    <string name="current_position">Get Current Location</string>
    <string name="get_position_manual">Get Location Manual</string>
    <string name="detecting_location">Detecting Location ...</string>

    <string name="loading">Loading ...</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_select_location_tabs">Select Location</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hent_manual">Select the country first ,then select the city you want.\nFinally press Select place button.</string>
    <string name="instruction_manual">Instruction</string>
    <string name="weather_updated">Weather Updated</string>
    <string name="is_this_correct_address">Is this a correct address ?</string>
    <string name="location_dialog_message">Do you want to adjust the timings of the prayer present where you are ?</string>


    <string name="now_coming_prays">Now come the date of </string>
</resources>
