<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9FFFFFF"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:background="@color/colorAccent"
        android:layout_alignParentStart="true"
        android:layout_weight="1.8"
        android:id="@+id/relativeLayout">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/sliderbackground"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---- : ---"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textSize="@dimen/date_number"
            android:layout_marginBottom="2dp"
            android:id="@+id/textView7"
            android:layout_above="@+id/textView8"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_location"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"
            android:textSize="@dimen/date_number"
            android:layout_centerVertical="true"
            android:id="@+id/textView8"
            android:layout_above="@+id/linearLayout2"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin"
            android:paddingTop="15dp"
            android:weightSum="4" >


            <LinearLayout
                android:id="@+id/mainDates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2.9"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/curr_month_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_marginRight="@dimen/small_margin"
                    android:gravity="center"
                    android:textSize="@dimen/mid"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/curr_month_txt_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_marginRight="@dimen/small_margin"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/mid"/>
            </LinearLayout>



        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hijri"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/mid"
            android:id="@+id/textView23"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:textColor="#FFFFFF"
            android:id="@+id/textView24"
            android:textSize="@dimen/mid"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_below="@+id/back_top"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/occasions_margin"
            android:background="#ffd92f"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/calendar_mode_l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:visibility="gone"
                android:src="@drawable/sl_arrow_icon" />

            <TextView
                android:id="@+id/calendar_mode_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:text="hijri calendar"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/calendar_mode_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:visibility="gone"
                android:src="@drawable/sr_arrow_icon" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:scaleType="fitXY"
            android:src="@drawable/text_box_no_arrow" />

        <LinearLayout
            android:id="@+id/miladi_cal_days"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:weightSum="7" >

            <TextView
                android:id="@+id/dayOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/satur"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dayTwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sun"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dayThree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mon"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dayFour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tues"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/dayFive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wedn"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/daySix"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thurs"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/daySeven"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fri"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/miladi_cal_days"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <GridView
                android:id="@+id/calendar_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#e5e5e5"
                android:horizontalSpacing="1dp"
                android:stretchMode="columnWidth"
                android:verticalSpacing="1dp"
                android:numColumns="7">
            </GridView>

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>