<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundtile"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="70dp"
        android:id="@+id/fullscreen_content_controls"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_margin="10dp"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@color/cardview_light_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                android:text="@string/instruction_manual"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:padding="10dp"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:text="@string/hent_manual"
                android:textColor="@color/graph_axis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>





        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/sp_country"
            android:gravity="center"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:background="@color/cardview_light_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/sp_city"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/cardview_light_background"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">





            <Button
                android:visibility="gone"
                android:id="@+id/btn_current_ok"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:gravity="center"
                android:textColor="@color/cast_intro_overlay_button_background_color"
                android:text="@string/ok"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



        </LinearLayout>



    </LinearLayout>
</ScrollView>